--- a/10897-h/10897-h.htm
+++ b/10897-h/10897-h.htm
@@ -644,7 +644,7 @@ imagination searched vigorously, but in vain....</p>
 
 <p>Yet, somehow or other, after another long spell of smoking, talking and
 roasting themselves before the great fire, the shadow that had so
-suddenly invaded their peaceful camp began to shirt. Perhaps D&eacute;fago's
+suddenly invaded their peaceful camp began to shift. Perhaps D&eacute;fago's
 efforts, or the return of his quiet and normal attitude accomplished
 this; perhaps Simpson himself had exaggerated the affair out of all
 proportion to the truth; or possibly the vigorous air of the wilderness
